process env google_client_id processing

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_CLIENT_ID="802096222389-opnmlm2gc063uop7e83gof32nfir2kug.apps.googleusercontent.com",
-GOOGLE_CLIENT_SECRET="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",
+GOOGLE_CLIENT_ID="802096222389-opnmlm2gc063uop7e83gof32nfir2kug.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 
 NEXT_URL=http://localhost:3000
