--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
