some link added

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 GOOGLE_CLIENT_ID="802096222389-opnmlm2gc063uop7e83gof32nfir2kug.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 
-GOOGLE_CLIENT_ID="dbc5204ee6d6079459b5"
-GOOGLE_CLIENT_SECRET="50a6b32064e789e48dd5a5d79e8d75e86c4e7a6c"
+GITHUB_CLIENT_ID="dbc5204ee6d6079459b5"
+GITHUB_CLIENT_SECRET="50a6b32064e789e48dd5a5d79e8d75e86c4e7a6c"
 
 
 NEXT_URL=http://localhost:3000
