--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ GOOGLE_CLIENT_ID="802096222389-opnmlm2gc063uop7e83gof32nfir2kug.apps.googleuserc
 GOOGLE_CLIENT_SECRET="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"
 
 GITHUB_CLIENT_ID="dbc5204ee6d6079459b5"
-GITHUB_CLIENT_SECRET="50a6b32064e789e48dd5a5d79e8d75e86c4e7a6c"
+GITHUB_CLIENT_SECRET="3b4c37431a63353d1ffdc88c6263ed451bbcd0ab"
+
+FACEBOOK_CLIENT_ID="901177721165906"
+FACEBOOK_CLIENT_SECRET="363675311d274d36429dfcda989205f0"
 
 
 NEXT_URL=http://localhost:3000
